CSS issues fixed for "No Content popup" in assign course to a class in Content Visibility

--- a/src/main/resources/css/mycollections.css
+++ b/src/main/resources/css/mycollections.css
@@ -854,8 +854,9 @@ button.btn-disabled{
 	color: #fab03a;
 	font: 12px arial;
 	float: left;
+	width: 30%;
+	margin: 10% 35%;
 }
-
 @media (max-width: 767px) {
 
 	#gShelfMainContainer .floderLeftContainer{
